feat: Add Swagger API documentation and Docker support
- Add Swagger UI setup with automatic schema generation from Prisma models
- Integrate swagger-ui-express and swagger-jsdoc packages
- Add health check and API info endpoints
- Update package.json with additional scripts for Docker and Prisma
- Convert CommonJS imports to ES modules
- Add comprehensive API documentation with authentication
- Update .gitignore to exclude sensitive files and dependencies
- Add detailed README with setup instructions and API endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,60 @@
-node_modules
-# Keep environment variables out of version control
-.env
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-/src/generated/prisma
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Build outputs
+build/
+dist/
+
+# Temporary files
+tmp/
+temp/
+
+# Database files
+*.sqlite
+*.db
+
+# Uploads
+src/storage/uploads/*
+!src/storage/uploads/.gitkeep
+
+# Generated Prisma client
+generated/
+
+# Docker
+.dockerignore
